fix: scrollbar gutter

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,6 +59,9 @@
 }
 
 @layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
   * {
     @apply border-border;
   }
